reinforce list-style none on timeline li to fix marker visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,7 @@ footer {
 }
 
 .timelines ol li {
+    list-style: none;
     padding: 20px;
     background-color: #3a3a3a;
     color: #f7f7f7;
